# PI

./: .gitignore  .gitmodules  PIFran_repo.code-workspace  README.md
DDS_board/: ad9959.ino  array_antenna_emulator.ino  signals_model.ino
DDS_board/array_antenna_emulator/: array_antenna_emulator.ino  signals_model.ino
DOA/: signal_generator.ipynb
DOA/gnuradio/: DoA-señales-adquiridas-con-emulador.grc  DoA_qpsk_sintetica.grc  doa_emulador_arreglo.py
Fpga/: axi_rw.elf
Fpga/prj/axi_read-write/: create_project.tcl
Fpga/prj/dds_compiler_and_fir_compiler_test/: coefs_format.txt  create_project.tcl
Fpga/prj/preprocesamiento/: coefs.txt  create_project.tcl
Fpga/prj/preprocessing_stage/: .gitignore  band_preprocessing_bd.tcl  ch_filter_bd.tcl  ch_preprocessing_bd.tcl  create_proj.tcl  preprocessing.tcl  preprocessing_bd.tcl  preprocessing_bd_Band_filter_0.mif  preprocessing_bd_Channel_filter_0.mif  preprocessing_setup_bd.tcl
Fpga/prj/test/: create_project.tcl
GNU-Radio/: .grc  .py  contador.grc  contador.py  dassd.py  generador_archivos.ipynb  gui_simplificada.grc  gui_simplificada.py
GNU-Radio/DDS_emulator/: maint.grc  maint.py  replicax16.grc  replicax16.py
GNU-Radio/DDS_emulator/data/: doa_2x2.py  proc.ipynb
GNU-Radio/DDS_emulator/udp_to_filesink/: main_cpp.grc
GNU-Radio/DDS_emulator/udp_to_filesink/main_cpp/: CMakeLists.txt  main_cpp.cpp  main_cpp.hpp
GNU-Radio/OOT/gr-beamforming/: CMakeLists.txt
GNU-Radio/UDP_sock_test/: Utilidades_udp.txt  packet_size_testing.py  socket_test.py  udp_packet_size_testing.grc  udp_packet_size_testing.py  udp_test.grc  udp_test.py
GNU-Radio/UDP_sock_test/UDP_to_file_sink/: file_source_from_udp_file_sink.grc  file_source_from_udp_file_sink.py  (+2 more)
GNU-Radio/UDP_sock_test/UDP_to_file_sink/udp_to_filesink/: CMakeLists.txt  udp_to_filesink.cpp  udp_to_filesink.hpp
GNU-Radio/UDP_source-original-proj/: test.grc  test.py
GNU-Radio/UDP_source_posprocessing_ctr/: default.py  untitled.grc  untitled.py
GNU-Radio/bf/: bf_fixed_doa.grc  bf_fixed_doa.py
GNU-Radio/capturas-jose/: complejizador.grc  default.py
GNU-Radio/entendiendo-file-sink/: output_test.py  test1  test1.grc
GNU-Radio/entendiendo-file-sink/output_test/: CMakeLists.txt  output_test.cpp  output_test.hpp
GNU-Radio/processing/: processing_stage.grc
Informe/: .gitignore  arch.md  ibtesis.cls  main.brf  main.tex  mibib.bib  preamble.sty
Informe/Resumen/: resumen.tex
Simulaciones/BF-Unidimensional/: BF-Unidimensional.py
Simulaciones/Doppler/: doppler.ipynb
Simulaciones/Preprocesamiento/: f_osc_test.ipynb  preprocesamiento.ipynb
Streaming-on-demand/: CMakeLists.txt  README.txt  TODO.md
Streaming-on-demand/client/src/: client.cpp  client.h  main.cpp
Streaming-on-demand/gnuradio/: Beamformer.cpp  Beamformer.hpp  CMakeLists.txt
Streaming-on-demand/gnuradio/gr-my_beamformer/: CMakeLists.txt  MANIFEST.md
Streaming-on-demand/gnuradio/gr-my_beamformer/apps/: CMakeLists.txt
Streaming-on-demand/gnuradio/gr-my_beamformer/cmake/Modules/: my_beamformerConfig.cmake
Streaming-on-demand/gnuradio/gr-my_beamformer/docs/: CMakeLists.txt  README.my_beamformer
Streaming-on-demand/gnuradio/gr-my_beamformer/docs/doxygen/: Doxyfile.in  swig_doc.py
Streaming-on-demand/gnuradio/gr-my_beamformer/docs/doxygen/doxyxml/: __init__.py  text.py
Streaming-on-demand/gnuradio/gr-my_beamformer/docs/doxygen/other/: main_page.dox
Streaming-on-demand/gnuradio/gr-my_beamformer/grc/: CMakeLists.txt  my_beamformer_beamformer_from_angles.block.yml  my_beamformer_beamformer_from_tle.block.yml
Streaming-on-demand/gnuradio/gr-my_beamformer/include/my_beamformer/: CMakeLists.txt  api.h
Streaming-on-demand/gnuradio/gr-my_beamformer/lib/: CMakeLists.txt
Streaming-on-demand/gnuradio/gr-my_beamformer/python/: CMakeLists.txt  __init__.py  beamformer_from_tle.py  qa_beamformer_from_angles.py  qa_beamformer_from_tle.py
Streaming-on-demand/gnuradio/gr-my_beamformer/swig/: my_beamformer_swig.i
Streaming-on-demand/lib/: tle_parser.py
Streaming-on-demand/lib/tle_parser/: setup.py
Streaming-on-demand/lib/tle_parser/tle_parser/: tle_parser.py
Streaming-on-demand/py_wrapper/: client_test.py  test_server.py
Streaming-on-demand/server/src/: main.cpp  server.cpp  server.h
Streaming-on-demand/src/: access_controller.cpp  access_controller.h  helpers.cpp  helpers.h  sample.cpp  sample.h  tle.cpp  tle.h  tle_parser.cpp  tle_parser.h
Streaming-on-demand/test_data/: source.tle  test_data.npy  tle_parser_tests.ipynb
UI/: .gitignore  gnu_schematic.py  idea.md  main.py  registers.conf  server.py  socCommands.py  sshClient.py
UI/cli/: dummy.py  francli.py  gnu_test.grc  gnu_test.py  main.py  server.py  setup.py  soc.py  socCommands.py  sshClient.py
helpers/: remove_first_bytes.sh  signal_modulator.ipynb
(+88 files in other folders)
